; ModuleID = '/home/carl/AnghaBench/glfw/src/extr_x11_monitor.c__glfwPlatformGetMonitorContentScale.c'
source_filename = "/home/carl/AnghaBench/glfw/src/extr_x11_monitor.c__glfwPlatformGetMonitorContentScale.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { float, float }

@_glfw = common dso_local global %struct.TYPE_4__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_glfwPlatformGetMonitorContentScale(i32* %0, float* %1, float* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca float*, align 8
  %6 = alloca float*, align 8
  store i32* %0, i32** %4, align 8
  store float* %1, float** %5, align 8
  store float* %2, float** %6, align 8
  %7 = load float*, float** %5, align 8
  %8 = icmp ne float* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %3
  %10 = load float, float* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfw, i32 0, i32 0, i32 0), align 4
  %11 = load float*, float** %5, align 8
  store float %10, float* %11, align 4
  br label %12

12:                                               ; preds = %9, %3
  %13 = load float*, float** %6, align 8
  %14 = icmp ne float* %13, null
  br i1 %14, label %15, label %18

15:                                               ; preds = %12
  %16 = load float, float* getelementptr inbounds (%struct.TYPE_4__, %struct.TYPE_4__* @_glfw, i32 0, i32 0, i32 1), align 4
  %17 = load float*, float** %6, align 8
  store float %16, float* %17, align 4
  br label %18

18:                                               ; preds = %15, %12
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
